feat: handling high-level routing and feature flags